Fixed header size on mobile

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -191,17 +191,42 @@ ul {
     top: 0;
     left: 0;
     z-index: 9999;
+
+    @media only screen and (max-width: 480px) {
+        height: 50px;
+
+        h1 {
+            display: none;
+        }
+        h2 {
+            display: block;
+        }
+    }
 }
 
 .title {
     float: left;
+
+    h2 { display: none;}
+    @media only screen and (max-width: 480px) {
+        margin: 5px 10px;
+
+        h1 {
+            display: none;
+
+        }
+        h2 {
+            display: block;
+            padding: 0;
+            margin: 0;
+        }
+    }
 }
 
 .container {
 
-
     @media only screen and (max-width: 480px) {
-        padding-top: 100px;
+        padding-top: 55px;
         min-width: 100%;
         min-height: 100%;
         position: relative;
@@ -212,21 +237,6 @@ ul {
     }
 }
 
-#hamburger {
-    display: none;
-
-    @media only screen and (max-width: 480px) {
-        display: block;
-        border-bottom: 17px double black;
-        border-top: 6px solid black;
-        content:"";
-        height: 5px;
-        width:40px;
-        position: relative;
-        top: 35px;
-        right: 20px;
-    }
-}
 .nav {
     float: right;
 }
@@ -294,7 +304,7 @@ label[for="nav-trigger"] {
 
     @media only screen and (max-width: 480px) {
         position: fixed;
-        top: 37px;
+        top: 15px;
         right: 15px;
         z-index: 2;
         cursor: pointer;
